src/KankaJournal/KankaJournalApplication.scss
.kanka-journal {
    height: 100%;
    padding: 5px;

    .write-action {
        display: none;
    }

    .editable .write-action {
        display: inline-block;
    }

    .entity-link {
        background: #0002;
        border: none;
        padding-bottom: 0;
        padding-top: 0;
    }

    h1 {
        flex: none;
    }

    p, details {
        margin-bottom: 1em;
        overflow: hidden;
    }

    .image-column {
        float: left;
        max-width: 40%;
        min-width: min-content;
        width: max-content;
        z-index: 2;
        position: relative;

        margin: 0 .5em .5em 0;

        display: grid;
        grid-template-columns: 1fr;
        grid-gap: .5em;

        > img, input {
            justify-self: center;
            max-width: 100%;
        }

        > div {
            width: 100%;
        }

        &:empty {
            margin: 0;
        }
    }

    dl.kanka-grid {
        margin: 0 0 1em;
        display: grid;
        grid-template-columns: auto 1fr;

        border-top: 1px solid rgba(0, 0, 0, .2);
        border-bottom: 1px solid rgba(0, 0, 0, .2);

        &.-borderless {
            border-top: none;
            border-bottom: none;
        }

        &:empty {
            display: none;
        }

        dt, dd {
            margin: 0;
            padding: .3em;
            border-bottom: 1px solid rgba(0, 0, 0, .07);

            &:last-of-type {
                border-bottom: none;
            }
        }

        dt {
            grid-column: 1;

            &.section {
                grid-column: 1 / span 2;
                font-weight: bold;
                font-size: 1em;
                background: rgba(0, 0, 0, .2);
            }

            &.-secret {
                &, & + dd {
                    background: #fc758920;
                }

                & + dd {
                    position: relative;

                    &:before {
                        background-image: url('../assets/silenced.svg');
                        background-repeat: no-repeat;
                        background-position: right 2px;
                        background-size: 20px 20px;
                        content: '';
                        position: absolute;
                        top: 0;
                        bottom: 0;
                        left: 0;
                        right: 0;
                        opacity: .3;
                        pointer-events: none;
                    }
                }
            }
        }

        dd {
            grid-column: 2;
            padding-left: 1.5em;

            &.path > a {
                margin-right: 1em;
                position: relative;

                &:after {
                    content: '»';
                    position: absolute;
                    right: -.8em;
                    pointer-events: none;
                    text-shadow: none;
                }

                &:last-child:after {
                    content: none;
                }
            }
        }
    }
}

